implement orig mod time round triping in S3 using metadata, to support new deploy mechanisms